--- a/resources/temple/factorial.html
+++ b/resources/temple/factorial.html
@@ -4,5 +4,13 @@
   </head>
   <body>
     <h2>The factorial page</h2>
+
+    <form name="factorial-send" method="post" action="factorial">
+      <input type="text" name="n" size="20"/>
+      <input type="submit" value="Give me"/> 
+    </form>
+
+    <div id="content"></div>
+
   </body>
 </html>
