--- a/resources/temple/main.html
+++ b/resources/temple/main.html
@@ -8,5 +8,8 @@
     <ul>
       <li><a href="/factorial">Factorial</a></li>
     </ul>
+
+    <hr/>
+    <a href="/stat">Stats</a>
   </body>
 </html>
