stuple refactoring, validation

--- a/resources/temple/factorial.html
+++ b/resources/temple/factorial.html
@@ -11,6 +11,11 @@
     </form>
 
     <div id="content"></div>
+    
+    <div id="error" style="background-color:red;"></div>
 
+    <hr/>
+    <a href="/">main</a>
+    <a href="/stats">stats</a>
   </body>
 </html>
