--- a/resources/temple/main.html
+++ b/resources/temple/main.html
@@ -4,12 +4,13 @@
   </head>
   <body>
     <h1>stuple</h1>
-    <h6>stupid services</h6> 
+    <hr/>
+    <h3>stupid services</h6> 
     <ul>
-      <li><a href="/factorial">Factorial</a></li>
+      <li><a href="/factorial">factorial</a></li>
     </ul>
 
     <hr/>
-    <a href="/stat">Stats</a>
+    <a href="/stats">stats</a>
   </body>
 </html>
