admin page added, ability to add factorials

--- a/resources/temple/main.html
+++ b/resources/temple/main.html
@@ -12,6 +12,7 @@
 
     <hr/>
     <a href="/stats">stats</a>
+    <a href="/admin">admin</a>
     <div>
       stuple version: <span id="info"/>
     </div>
