imbored service template added

--- a/resources/temple/main.html
+++ b/resources/temple/main.html
@@ -8,6 +8,7 @@
     <h3>stupid services</h6> 
     <ul>
       <li><a href="/factorial">factorial</a></li>
+      <li><a href="/imbored">imbored</a></li>
     </ul>
 
     <hr/>
