--- a/resources/temple/imbored.html
+++ b/resources/temple/imbored.html
@@ -7,7 +7,10 @@
 
     <hr/>
     
-    <div id="content" style="font-size:30px"></div>
+    <div id="image">
+      <img src="bubble.png"></img>
+    </div>
+    <div id="title" style="font-size:30px"></div>
     <a href="/imbored">Wanna more!</a>
     <hr/>
     <a href="/">main</a>
