imbored stat page, image size limited, version incremented

--- a/resources/temple/stat.html
+++ b/resources/temple/stat.html
@@ -13,6 +13,12 @@
       <b><span id="fact-stat"></span></b>
     </p>
     
+    <p>
+      <a href="/imbored">imbored</a>
+      Count=
+      <b><span id="imbored-stat"></span></b>
+    </p>
+
     <hr/>
     <a href="/">main</a>
   </body>
