--- a/resources/temple/imbored.html
+++ b/resources/temple/imbored.html
@@ -8,7 +8,8 @@
     <hr/>
     
     <div id="image">
-      <img src="bubble.png"></img>
+      <img 
+	 style="height:auto; width:auto; max-width:300px; max-height:300px;" src=""></img>
     </div>
     <div id="title" style="font-size:30px"></div>
     <a href="/imbored">Wanna more!</a>
